--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ __pycache__
 db.sqlite3
 /static
 .DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
+venv/
