--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,17 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiosignal==1.3.1
-altgraph @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
-annotated-types==0.7.0
-anyio==4.4.0
-asgiref==3.8.1
-async-timeout==4.0.3
-attrs==24.2.0
-backoff==2.2.1
-beautifulsoup4==4.12.3
-certifi==2024.8.30
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.1.7
-cryptography==43.0.1
-dataclasses-json==0.6.7
-deepdiff==8.0.1
 Django==4.2.16
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
-emoji==2.12.1
-exceptiongroup==1.2.2
-faiss-cpu==1.8.0.post1
-filelock==3.16.0
-filetype==1.2.0
-frozenlist==1.4.1
-fsspec==2024.9.0
-future @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
-greenlet==3.1.0
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.2
-huggingface-hub==0.24.6
-idna==3.8
-Jinja2==3.1.4
-joblib==1.4.2
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==3.0.0
-langchain==0.2.16
-langchain-community==0.2.16
-langchain-core==0.2.39
-langchain-text-splitters==0.2.4
-langdetect==1.0.9
-langsmith==0.1.119
-lxml==5.3.0
-macholib @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
-MarkupSafe==2.1.5
-marshmallow==3.22.0
-mpmath==1.3.0
-multidict==6.1.0
-mypy-extensions==1.0.0
-nest-asyncio==1.6.0
-networkx==3.2.1
-nltk==3.9.1
-numpy==1.26.4
-olefile==0.47
-orderly-set==5.2.2
-orjson==3.10.7
-packaging==24.1
-pdfminer.six==20240706
-pillow==10.4.0
-psutil==6.0.0
-pycparser==2.22
-pydantic==2.9.1
-pydantic_core==2.23.3
-PyJWT==2.9.0
-PyMuPDF==1.24.10
-PyMuPDFb==1.24.10
-pypdf==4.3.1
-PyPDF2==3.0.1
-python-dateutil==2.9.0.post0
-python-iso639==2024.4.27
-python-magic==0.4.27
-python-oxmsg==0.0.1
-PyYAML==6.0.2
-rapidfuzz==3.9.7
-regex==2024.9.11
-requests==2.32.3
-requests-toolbelt==1.0.0
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.13.1
-sentence-transformers==3.1.0
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.34
-sqlparse==0.5.1
-sympy==1.13.2
-tabulate==0.9.0
-tenacity==8.5.0
-threadpoolctl==3.5.0
-tokenizers==0.19.1
-torch==1.13.1
-tqdm==4.66.5
-transformers==4.44.2
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-unstructured==0.15.10
-unstructured-client==0.25.8
-urllib3==2.2.3
-wrapt==1.16.0
-yarl==1.11.1
 python-dotenv
+requests
+beautifulsoup4
+PyPDF2
+faiss-cpu==1.8.0.post1
+sentence-transformers==3.1.0
+numpy
+scikit-learn
+torch==2.2.2
+psycopg2-binary
+langchain
+langchain-community
+unstructured
