Add configurations to address disk space issues

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 SECRET_KEY=django-insecure-h!@&p4yid)ndm%n4s(wz6ih+-if$j01bv@1_8o595_0zi9s)29
-DEBUG=True
-DATABASE_URL=postgres://user:password@localhost/dbname
-ALLOWED_HOSTS=production-v2.eba-vfrfpast.us-west-2.elasticbeanstalk.com,localhost:5173,127.0.0.1:8000,127.0.0.1,localhost
+DEBUG=false
+
+ALLOWED_HOSTS=production.eba-vfrfpast.us-west-2.elasticbeanstalk.com,localhost:5173,127.0.0.1:8000,127.0.0.1,localhost
 
 DB_NAME=vector_search_db
-DB_USER=vector_search_user
-DB_PASSWORD=henry12
+DB_USER=vectoradmin
+DB_PASSWORD=henry1234
 DB_HOST=localhost
 DB_PORT=5432
