--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -4,4 +4,4 @@
        leader_only: true
    option_settings:
      aws:elasticbeanstalk:application:environment:
-       DJANGO_SETTINGS_MODULE: vector_search_project.settings
+       DJANGO_SETTINGS_MODULE: vector_search.settings
