--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,5 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: vector_search_project.wsgi:application
+    WSGIPath: vector_search.wsgi:application
   aws:elasticbeanstalk:application:environment:
-    DJANGO_SETTINGS_MODULE: vector_search_project.settings
+    DJANGO_SETTINGS_MODULE: vector_search.settings
