--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -7,8 +7,7 @@ option_settings:
     PYTHONPATH: "/var/app/current:$PYTHONPATH"
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: staticfiles
-  aws:elasticbeanstalk:container:python:
-    PythonVersion: 3.11
+
 container_commands:
   01_upgrade_pip:
-    command: "/var/app/venv/staging-LQM1lest/bin/pip install --upgrade pip --no-cache-dir"
+    command: "source /var/app/venv/*/bin/activate && pip install --upgrade pip --no-cache-dir"
