--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ DEBUG=false
 
 ALLOWED_HOSTS=production.eba-vfrfpast.us-west-2.elasticbeanstalk.com,localhost:5173,127.0.0.1:8000,127.0.0.1,localhost
 
-DB_NAME=vector_search_db
-DB_USER=vectoradmin
-DB_PASSWORD=henry1234
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=
 DB_HOST=localhost
 DB_PORT=5432
