render PaaS setup

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SECRET_KEY=django-insecure-h!@&p4yid)ndm%n4s(wz6ih+-if$j01bv@1_8o595_0zi9s)29
-DEBUG=false
-
-ALLOWED_HOSTS=production.eba-vfrfpast.us-west-2.elasticbeanstalk.com,localhost:5173,127.0.0.1:8000,127.0.0.1,localhost
+DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1
+DATABASE_URL=your_local_database_url
 
 DB_NAME=postgres
 DB_USER=postgres
