changes to build

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 SECRET_KEY=django-insecure-h!@&p4yid)ndm%n4s(wz6ih+-if$j01bv@1_8o595_0zi9s)29
-DEBUG=True
+DEBUG=False
 ALLOWED_HOSTS=localhost,127.0.0.1
 DATABASE_URL=your_local_database_url
+DJANGO_SETTINGS_MODULE=vector_search_project.settings
+
 
 DB_NAME=postgres
 DB_USER=postgres
