--- a/.env
+++ b/.env
@@ -1,12 +1,5 @@
 SECRET_KEY=django-insecure-h!@&p4yid)ndm%n4s(wz6ih+-if$j01bv@1_8o595_0zi9s)29
 DEBUG=False
-ALLOWED_HOSTS=localhost,127.0.0.1
-DATABASE_URL=your_local_database_url
+ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0:8000,0.0.0.0
 DJANGO_SETTINGS_MODULE=vector_search_project.settings
-
-
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASSWORD=
-DB_HOST=localhost
-DB_PORT=5432
+DATABASE_URL=postgres://postgres:@localhost:5432/vector_search_db
