--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
 SECRET_KEY=your_secret_key_here
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
-DB_NAME=your_local_db_name
-DB_USER=your_local_db_user
-DB_PASSWORD=your_local_db_password
-DB_HOST=localhost
-DB_PORT=5432
+DATABASE_URL=postgres://username:password@localhost:5432/vector_search_db
+DJANGO_SETTINGS_MODULE=vector_search_project.settings
