--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate"
-    startCommand: "gunicorn vector_search_project.wsgi:application --bind 0.0.0.0:$PORT"
+    startCommand: "ls -la && env && gunicorn vector_search_project.wsgi:application --bind 0.0.0.0:$PORT"
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: vector_search_project.settings
@@ -15,7 +15,7 @@ services:
       - key: DEBUG
         value: 'False'
       - key: ALLOWED_HOSTS
-        value: 'yourdomain.com'
+        value: 'localhost,127.0.0.1,0.0.0.0:8000,0.0.0.0'
       - key: DATABASE_URL
         fromDatabase: 
           name: vector-search-db
