--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
       - key: DEBUG
         value: 'False'
       - key: ALLOWED_HOSTS
-        value: 'localhost,127.0.0.1,0.0.0.0:8000,0.0.0.0'
+        value: 'queryquill-frontend.onrender.com,localhost,127.0.0.1,0.0.0.0:8000,0.0.0.0'
       - key: DATABASE_URL
         fromDatabase: 
           name: vector-search-db
