--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ CORS_ALLOWED_ORIGINS=http://127.0.0.1:8000,http://localhost:5173
 CORS_ALLOW_CREDENTIALS=True
 DJANGO_SETTINGS_MODULE=vector_search_project.settings
 DATABASE_URL=postgres://postgres:@localhost:5432/vector_search_db
+USE_SQLITE=True  # Set to 'True' to use SQLite
