--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 SECRET_KEY=your_secret_key_here
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
+CORS_ALLOWED_ORIGINS=http://127.0.0.1:8000,http://localhost:5173
+CORS_ALLOW_CREDENTIALS=True
 DATABASE_URL=postgres://username:password@localhost:5432/vector_search_db
 DJANGO_SETTINGS_MODULE=vector_search_project.settings
+USE_SQLITE=True  # Set to 'True' to use SQLite
