--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ CORS_ALLOW_CREDENTIALS=True
 DATABASE_URL=postgres://username:password@localhost:5432/vector_search_db
 DJANGO_SETTINGS_MODULE=vector_search_project.settings
 USE_SQLITE=True  # Set to 'True' to use SQLite
+REDIS_URL=redis://localhost:6379/0
