--- a/.env
+++ b/.env
@@ -6,3 +6,16 @@ CORS_ALLOW_CREDENTIALS=True
 DJANGO_SETTINGS_MODULE=vector_search_project.settings
 DATABASE_URL=postgres://postgres:@localhost:5432/vector_search_db
 USE_SQLITE=True  # Set to 'True' to use SQLite
+
+
+cat << EOF > .env
+SECRET_KEY=django-insecure-h!@&p4yid)ndm%n4s(wz6ih+-if$j01bv@1_8o595_0zi9s)29
+DEBUG=False
+ALLOWED_HOSTS=146.190.165.78,10.124.0.2,146.190.160.1,query-quill-8pqht.ondigitalocean.app
+DATABASE_URL=postgres://postgres:@localhost:5432/vector_search_db
+DJANGO_SETTINGS_MODULE=vector_search_project.settings
+REDIS_URL=redis://localhost:6379/0
+USE_SQLITE=True
+CORS_ALLOWED_ORIGINS=http://146.190.165.78,http://10.124.0.2,http://146.190.160.1,http://query-quill-8pqht.ondigitalocean.app
+CORS_ALLOW_CREDENTIALS=True
+EOF
