--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,8 @@ langchain-community
 unstructured
 gunicorn
 dj-database-url
-celery
-redis
+celery==5.3.4
+redis==5.0.1
 gevent==21.12.0
+nltk==3.8.1
 
